tdf#62812: writer_pdf_Export Font GDI handle leaks

ImplDoSetFont creates and returns a font GDI object
3 callers ignored it so it leaked.

See https://bugs.documentfoundation.org/show_bug.cgi?id=62812#c14
for full explanation

Change-Id: I472783fb1bc34610ceb8d0a19d7e5f117838713c